--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="manifest" href="./manifest.json">
     <title>VRsziget - Fedezd fel a Valóság Határait</title>
   </head>
-  <body class="overflow-x-hidden !scroll-smooth">
-    <div id="root" class="bg-black font-libreBas"></div>
+  <body class="overflow-x-hidden w-screen !scroll-smooth">
+    <div id="root" class="bg-black font-libreBas w-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
